--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         }
     ],
     "require": {
-        "php": ">=7.4"
+        "php": ">=7.4",
+        "bschmitt/laravel-amqp": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.0"
@@ -42,5 +43,6 @@
             }
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
