--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
     ],
     "require": {
         "php": ">=7.4",
-        "bschmitt/laravel-amqp": "^2.0",
         "illuminate/config": "^8.50",
-        "illuminate/console": "^8.50"
+        "illuminate/console": "^8.50",
+        "php-amqplib/php-amqplib": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.0"
